# phpipam-client

./: .bumpversion.cfg  .editorconfig  .flake8  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
phpipam_client/: __init__.py  client.py  rijndael.py
